@@ -162,5 +162,6 @@
   graph drawing/register node key=root,
   graph drawing/register math key=level distance,
   graph drawing/register math key=sibling distance
+}
 
 \endinput
