@@ -1,5 +1,10 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Fix broken graph drawing code caused by merging my changes from 
+	Mercurial into CVS.
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Further work on the Walshaw algorithm.
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
